--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   </div>
 
   <div>
+    <h2>Contact Me</h2>
     <ul>Email:
       <a href="uriel.arriaga@momodevops.dev">uriel.arriaga@momodevops.dev</a>
     </ul>
@@ -42,7 +43,7 @@
   </div>
 
   <div>
-    <h1>Favorites Media</h1>
+    <h2>Favorites Media</h2>
     <table border="1">
       <tr>
         <th>video games</th>
