added proyects html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
       accident, sometimes on purpose (injected humour and the like).
     </p>
   </div>
-
+<div>
+  <h2>proyects</h2>
+  <a href="/proyects"></a>
+</div>
   <div>
     <h2>Contact Me</h2>
     <ul>Email:
