modified image size in index

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     Uriel Arriaga
   </h1>
   <figure>
-    <img src="BrunoyYo.jpg" alt="Me & my dog">
+    <img src="BrunoyYo.jpg" alt="Me & my dog" style="width:500px;height:600px;">
   </figure>
   <div>
     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
