--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </div>
 <div>
   <h2>proyects</h2>
-  <a href="/proyects"></a>
+  <a href="/proyects">Proyects</a>
 </div>
   <div>
     <h2>Contact Me</h2>
