added coviex proyect

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     </p>
   </div>
 <div>
-  <h2>proyects</h2>
-  <a href="/proyects">Proyects</a>
+  <h2>Proyects</h2>
+  <a href="/CoviEx/">CoviEx</a>
 </div>
   <div>
     <h2>Contact Me</h2>
